--- a/WpfCritic/WpfCritic/View/EditOrAddSongWindow.xaml
+++ b/WpfCritic/WpfCritic/View/EditOrAddSongWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:WpfCritic.View"
         xmlns:wpfToolkit="clr-namespace:Xceed.Wpf.Toolkit;assembly=Xceed.Wpf.Toolkit"
         mc:Ignorable="d"
-        Title="Пісня" Height="374.436" Width="446.617">
+        Title="Пісня" Height="374.436" Width="446.617" MinHeight="374.436" MinWidth="446.617">
     <Grid Background="AliceBlue">
         <Grid Margin="4,8,4,8">
             <Grid.RowDefinitions>
