--- a/WpfCritic/WpfCritic/View/PerformerDetailsWindow.xaml
+++ b/WpfCritic/WpfCritic/View/PerformerDetailsWindow.xaml
@@ -6,52 +6,56 @@
         xmlns:local="clr-namespace:WpfCritic.View"
         mc:Ignorable="d"
         Title="Деталі додаткового контента" Height="471.872" Width="1001.745" MinHeight="471.872" MinWidth="1001.745">
-    <Grid Background="AliceBlue">
-        <Grid Margin="4,8,4,8">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="auto" />
-                <RowDefinition Height="*" />
-                <RowDefinition Height="auto" />
-            </Grid.RowDefinitions>
+    <ScrollViewer VerticalScrollBarVisibility="Auto">
+        <Grid Background="AliceBlue">
+            <Grid Margin="4,8,4,8">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="auto" />
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="auto" />
+                    <RowDefinition Height="auto" />
+                    <RowDefinition Height="auto" />
+                </Grid.RowDefinitions>
 
-            <TextBlock Grid.Row="0" HorizontalAlignment="Center" VerticalAlignment="Center" FontFamily="Impact" FontSize="21.333" FontWeight="Bold" Foreground="#FF00167C" Text="Додатковий контент" />
+                <TextBlock Grid.Row="0" HorizontalAlignment="Center" VerticalAlignment="Center" FontFamily="Impact" FontSize="21.333" FontWeight="Bold" Foreground="#FF00167C" Text="Додатковий контент" />
 
-            <Grid Grid.Row="1">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*" />
-                    <ColumnDefinition Width="*" />
-                </Grid.ColumnDefinitions>
-                <Image Grid.Column="0" Height="300" Width="400" HorizontalAlignment="Center" VerticalAlignment="Center" Source="{Binding Image}" />
-                <Grid Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center" >
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="auto" />
-                        <RowDefinition Height="auto" />
-                        <RowDefinition Height="auto" />
-                        <RowDefinition Height="auto" />
-                        <RowDefinition Height="auto" />
-                    </Grid.RowDefinitions>
+                <Grid Grid.Row="1">
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="auto" />
+                        <ColumnDefinition Width="*" />
                         <ColumnDefinition Width="*" />
                     </Grid.ColumnDefinitions>
+                    <Image Grid.Column="0" Margin="2,4,2,4" Height="300" Width="400" HorizontalAlignment="Center" VerticalAlignment="Center" Source="{Binding Image}" />
+                    <Grid Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center" >
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="auto" />
+                            <RowDefinition Height="auto" />
+                            <RowDefinition Height="auto" />
+                            <RowDefinition Height="auto" />
+                        </Grid.RowDefinitions>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="auto" />
+                            <ColumnDefinition Width="*" />
+                        </Grid.ColumnDefinitions>
                     
-                    <Label Grid.Column="0" Grid.Row="0" Content="Тип додаткового контента:" HorizontalAlignment="Left" VerticalAlignment="Center" FontFamily="Times New Roman" FontSize="16" FontWeight="Bold" />
-                    <TextBlock Grid.Column="1" Grid.Row="0" HorizontalAlignment="Left" VerticalAlignment="Center" FontFamily="Times New Roman" FontSize="16" Text="{Binding PerformerTypeUkr}" />
-                    <Label Grid.Column="0" Grid.Row="1" Content="{Binding NameLabel}" HorizontalAlignment="Left" VerticalAlignment="Center" FontFamily="Times New Roman" FontSize="16" FontWeight="Bold" />
-                    <TextBlock Grid.Column="1" Grid.Row="1" HorizontalAlignment="Left" VerticalAlignment="Center" FontFamily="Times New Roman" FontSize="16" Text="{Binding Name}" />
-                    <Label Grid.Column="0" Grid.Row="2" Content="Прізвище:" Visibility="{Binding SurnameVisibility}" HorizontalAlignment="Left" VerticalAlignment="Center" FontFamily="Times New Roman" FontSize="16" FontWeight="Bold" />
-                    <TextBlock Grid.Column="1" Grid.Row="2" Visibility="{Binding SurnameVisibility}" HorizontalAlignment="Left" VerticalAlignment="Center" FontFamily="Times New Roman" FontSize="16" Text="{Binding Surname}" />
-                    <Label Grid.Column="0" Grid.Row="3" Content="{Binding DateOfBirthLabel}" Visibility="{Binding DateOfBirthVisibility}" HorizontalAlignment="Left" VerticalAlignment="Center" FontFamily="Times New Roman" FontSize="16" FontWeight="Bold" />
-                    <TextBlock Grid.Column="1" Grid.Row="3" Visibility="{Binding DateOfBirthVisibility}" HorizontalAlignment="Left" VerticalAlignment="Center" FontFamily="Times New Roman" FontSize="16" Text="{Binding DateOfBirth}" />
-                    <Label Grid.Column="0" Grid.Row="4" Content="{Binding SummaryLabel}" Visibility="{Binding SummaryVisibility}" HorizontalAlignment="Left" VerticalAlignment="Center" FontFamily="Times New Roman" FontSize="16" FontWeight="Bold" />
-                    <TextBlock Grid.Column="1" Grid.Row="4" Visibility="{Binding SummaryVisibility}" HorizontalAlignment="Left" VerticalAlignment="Center" FontFamily="Times New Roman" FontSize="16" TextWrapping="Wrap" Text="{Binding Summary}" />
+                        <Label Grid.Column="0" Grid.Row="0" Content="Тип додаткового контента:" HorizontalAlignment="Left" VerticalAlignment="Center" FontFamily="Times New Roman" FontSize="16" FontWeight="Bold" />
+                        <TextBlock Grid.Column="1" Grid.Row="0" HorizontalAlignment="Left" VerticalAlignment="Center" FontFamily="Times New Roman" FontSize="16" Text="{Binding PerformerTypeUkr}" />
+                        <Label Grid.Column="0" Grid.Row="1" Content="{Binding NameLabel}" HorizontalAlignment="Left" VerticalAlignment="Center" FontFamily="Times New Roman" FontSize="16" FontWeight="Bold" />
+                        <TextBlock Grid.Column="1" Grid.Row="1" HorizontalAlignment="Left" VerticalAlignment="Center" FontFamily="Times New Roman" FontSize="16" Text="{Binding Name}" />
+                        <Label Grid.Column="0" Grid.Row="2" Content="Прізвище:" Visibility="{Binding SurnameVisibility}" HorizontalAlignment="Left" VerticalAlignment="Center" FontFamily="Times New Roman" FontSize="16" FontWeight="Bold" />
+                        <TextBlock Grid.Column="1" Grid.Row="2" Visibility="{Binding SurnameVisibility}" HorizontalAlignment="Left" VerticalAlignment="Center" FontFamily="Times New Roman" FontSize="16" Text="{Binding Surname}" />
+                        <Label Grid.Column="0" Grid.Row="3" Content="{Binding DateOfBirthLabel}" Visibility="{Binding DateOfBirthVisibility}" HorizontalAlignment="Left" VerticalAlignment="Center" FontFamily="Times New Roman" FontSize="16" FontWeight="Bold" />
+                        <TextBlock Grid.Column="1" Grid.Row="3" Visibility="{Binding DateOfBirthVisibility}" HorizontalAlignment="Left" VerticalAlignment="Center" FontFamily="Times New Roman" FontSize="16" Text="{Binding DateOfBirth}" />
+                    </Grid>
                 </Grid>
+
+                <Label Grid.Row="2" Content="{Binding SummaryLabel}" Visibility="{Binding SummaryVisibility}" HorizontalAlignment="Center" VerticalAlignment="Center" FontFamily="Times New Roman" FontSize="16" FontWeight="Bold" />
+                <TextBlock Grid.Row="3" Visibility="{Binding SummaryVisibility}" HorizontalAlignment="Center" VerticalAlignment="Center" FontFamily="Times New Roman" FontSize="16" TextWrapping="Wrap" Text="{Binding Summary}" />
+
+                <StackPanel Grid.Row="4" Orientation="Horizontal" HorizontalAlignment="Right">
+                    <Button Name="cancelButton" Margin="4, 2, 0, 0" Padding="4,2,4,2" MinWidth="50" Content="Закрити" Click="cancelButton_Click" />
+                </StackPanel>
+
             </Grid>
-
-            <StackPanel Grid.Row="4" Orientation="Horizontal" HorizontalAlignment="Right">
-                <Button Name="cancelButton" Margin="4, 2, 0, 0" Padding="4,2,4,2" MinWidth="50" Content="Закрити" Click="cancelButton_Click" />
-            </StackPanel>
-
         </Grid>
-    </Grid>
+    </ScrollViewer>
 </Window>
