--- a/WpfCritic/WpfCritic/View/EntertainmentUserControl.xaml
+++ b/WpfCritic/WpfCritic/View/EntertainmentUserControl.xaml
@@ -21,8 +21,10 @@
                         <ColumnDefinition Width="auto" />
                         <ColumnDefinition Width="auto" />
                     </Grid.ColumnDefinitions>
-
-                    <TextBlock Margin="4,0,0,0" Grid.Row="0" Grid.Column="1" Text="{Binding Path=Name}" FontWeight="Bold" FontSize="13.333" Background="{x:Null}" Foreground="#FF0056D3" />
+                    <StackPanel Grid.Row="0" Grid.Column="1" Orientation="Horizontal">
+                        <TextBlock Margin="4,0,0,0" Text="{Binding Path=AlbumAuthors}" FontWeight="Bold" FontSize="13.333" Background="{x:Null}" Foreground="#FF0056D3" />
+                        <TextBlock Margin="4,0,0,0" Text="{Binding Path=Name}" FontWeight="Bold" FontSize="13.333" Background="{x:Null}" Foreground="#FF0056D3" />
+                    </StackPanel>
                     <TextBlock Margin="4,0,0,0" Grid.Row="1" Grid.Column="1" Text="{Binding Path=ReleaseDate.Year, StringFormat='({0})'}" />
                     <TextBlock Margin="2,4,2,4" Grid.Column="0" Grid.RowSpan="2" Text="{Binding Path=EntertainmentTypeUkr}" FontWeight="Bold" TextDecorations="Underline" FontSize="14.667" Foreground="#FF11007C" />
                     
